--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: wp-2021-10-27
 Theme URI: https://monurlpersonnel.com/mesthemes
-Author: Prenom NOM
+Author: Clément VILLA
 Author URI: https://monurlpersonnel.com
-Description: Le thème développer avec Chaton
+Description: Le thème développer avec Chaton pour tester avec GitKraken
 Version: 0.1
 Tags: simple, facile, sans danger, base pour la suite
 */
